# COF

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
coffeeshop/: cof_db.json  db.sqlite3  gunicorn.py  manage.py  requirements.txt
coffeeshop/cart/: cart.py  context_processor.py  domains.py  factory.py  interfaces.py  product_service.py  storage.py  urls.py  views.py
coffeeshop/cart/templates/: cart_detail.html
coffeeshop/catalog/: admin.py  apps.py  domains.py  filters.py  models.py  urls.py  utils.py  views.py
coffeeshop/catalog/management/commands/: loadtestdata.py
coffeeshop/catalog/migrations/: 0001_initial.py  0002_category_manufacture_region_sort_type_and_more.py  0003_alter_product_category_alter_product_manufacture_and_more.py  0004_alter_product_image_alter_product_manufacture_and_more.py  0004_alter_product_manufacture_alter_product_region_and_more.py  0005_alter_product_image_alter_product_manufacture_and_more.py  0006_alter_product_image.py  0007_alter_product_options.py  0008_alter_category_name_alter_product_name.py  0009_rename_category_productcategory_and_more.py  0010_rename_type_product_product_type.py  0011_alter_product_options_alter_productcategory_options.py
coffeeshop/catalog/templates/: catalog.html  item.html  list_categories.html
coffeeshop/catalog/templatetags/: catalog_tags.py
coffeeshop/config/: asgi.py  settings.py  urls.py  wsgi.py
coffeeshop/order/: admin.py  apps.py  domains.py  factory_order.py  forms.py  interfaces.py  models.py  services.py  urls.py  views.py
coffeeshop/order/migrations/: 0001_initial.py  0002_alter_order_options_alter_orderitem_options_and_more.py  0003_order_applied_promo_name_order_applied_promo_status.py  0004_order_cart_price_order_discount_sum.py  0005_alter_order_cart_price.py
coffeeshop/order/templates/: create_order.html  order_created.html  order_notification.html  order_notification.txt
coffeeshop/promo/: admin.py  apps.py  context_processor.py  domains.py  forms.py  interfaces.py  models.py  promo.py  promo_factory.py  urls.py  utils.py  views.py
coffeeshop/promo/migrations/: 0001_initial.py  0002_promo_promotype_delete_carttotaldiscount_and_more.py  0003_alter_promo_min_cart_total_and_more.py  0004_alter_promo_promo_type_delete_promotype.py  0005_alter_promo_promo_type.py
coffeeshop/promo/templates/: promo.html
coffeeshop/static/css/: base_styles.css
coffeeshop/templates/: base.html
coffeeshop/tests/: conftest.py
coffeeshop/tests/test_cart/: test_cart.py  test_context_processor.py  test_factory.py  test_interfaces.py  test_product_service.py  test_storage.py  test_views.py
coffeeshop/tests/test_catalog/: test_catalog_models.py  test_catalog_utils.py  test_catalog_views.py
coffeeshop/tests/test_order/: test_forms.py  test_interfaces.py  test_models.py  test_services.py  test_views.py
coffeeshop/tests/test_promo/: test_forms.py  test_promo.py  test_promo_context_processor.py  test_promo_factory.py
coffeeshop/tests/test_user/: test_user_authentication.py
coffeeshop/users/: authentication.py  forms.py  urls.py  views.py
coffeeshop/users/templates/: login.html  password_change_done.html  profile.html  register.html  welcome_after_register.html
nginx/: coffeeshop_nginx.conf
tests/: conftest.py
tests/test_cart/: test_cart.py  test_context_processor.py  test_factory.py  test_product_service.py  test_storage.py  test_views.py
tests/test_catalog/: test_catalog_utils.py  test_catalog_views.py
tests/test_order/: test_forms.py  test_models.py  test_services.py  test_views.py
tests/test_promo/: test_forms.py  test_promo.py  test_promo_context_processor.py  test_promo_factory.py
tests/test_user/: test_user_authentication.py  test_user_forms.py  test_user_views.py
