[project]
name = "cof"
version = "0.1.0"
description = ""
authors = [
    {name = "srt-2000",email = "srt2000888@gmail.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "django (==5.2.4)",
    "pillow (>=11.2.0,<12.0.0)",
    "django-extensions (==4.1)",
    "django-filter (>=25.1,<26.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "django-environ (==0.12.0)",
    "asgiref (==3.9.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

#[tool.pytest.ini_options]
#DJANGO_SETTINGS_MODULE = "config.settings"
[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"

[tool.ruff]
# Main parameters
line-length = 120  # Standard line length (can be changed to 88 or 100)
target-version = "py311"  # Minimum Python version (replace with yours: py37, py38, etc.)

[tool.ruff.lint]
# Ignore specific directories and files
extend-exclude = [
    "**/migrations/",  # Ignore Django migrations
    "**/tests/",       # Ignore tests
    "**/static/",      # Ignore static files
    "*.pyi",           # Ignore stub files
]

[tool.ruff.lint.rules]
# Rules that cannot be automatically fixed
unfixable = []

# Included rules (similar to flake8 + additional)
select = [
    "E",   # PEP8 errors (pycodestyle)
    "F",   # Pyflakes (unused variables, imports, etc.)
    "W",   # PEP8 warnings (pycodestyle)
    "UP",  # Rules for modern Python versions (e.g., automatic update of `typing.List` -> `list`)
    "I",   # Import sorting (isort)
    "C90", # Code complexity (mccabe)
    "B",   # Found bugs (flake8-bugbear)
    "DTZ", # Timezone errors (e.g., datetime.now() without timezone)
]

# Ignored rules
ignore = [
    "E501",  # Ignore line length (if using black)
    "F401",  # Unused imports in __init__.py
    "B008",  # Not recommended to use mutable default arguments
]

[tool.ruff.lint.isort]
# isort settings (import sorting)
known-first-party = ["coffeeshop"]  # Your modules for sorting
required-imports = ["from __future__ import annotations"]  # Automatically add imports

[tool.ruff.format]
# Formatting settings (if ruff format)
docstring-code-format = true  # Format code in docstrings
quote-style = "double"       # Single or double quotes ("double" or "single")

# For working with .env
[tool.poetry.dependencies]
python = ">=3.11,<4"
django = "^5.0"
#django-environ = "^0.12.0"  # Version supporting Python 3.12