[project]
name = "cof"
version = "0.1.0"
description = ""
authors = [{ name = "srt-2000", email = "srt2000888@gmail.ru" }]
requires-python = ">=3.11,<4"
readme = "README.md"

dependencies = [
    "django>=5.0,<6",
    "pillow>=11.2.0,<12",
    "django-extensions==4.1",
    "django-filter>=25.1,<26",
    "asgiref==3.9.1",
    "dotenv>=0.9.9,<0.10",
    "psycopg2-binary>=2.9.10,<3",
    "gunicorn>=23.0.0,<24",
    "gevent>=25.8.2,<26",
]

[dependency-groups]
dev = [
    "pytest-django>=4.11.1,<5",
    "pytest-mock>=3.14.0,<4",
    "ruff>=0.11.7,<0.12",
]

[tool.uv]
package = false

[tool.ruff]
# Main parameters
line-length = 120  # Standard line length (can be changed to 88 or 100)
target-version = "py311"  # Minimum Python version (replace with yours: py37, py38, etc.)

[tool.ruff.lint]
# Ignore specific directories and files
exclude = [
    "**/migrations/",  # Ignore Django migrations
    "**/tests/",       # Ignore tests
    "**/static/",      # Ignore static files
    "*.pyi",           # Ignore stub files
]

# Rules that cannot be automatically fixed
unfixable = []

# Included rules (similar to flake8 + additional)
select = [
    "E",   # PEP8 errors (pycodestyle)
    "F",   # Pyflakes (unused variables, imports, etc.)
    "W",   # PEP8 warnings (pycodestyle)
    "UP",  # Rules for modern Python versions (e.g., automatic update of `typing.List` -> `list`)
    "I",   # Import sorting (isort)
    "C90", # Code complexity (mccabe)
    "B",   # Found bugs (flake8-bugbear)
    "DTZ", # Timezone errors (e.g., datetime.now() without timezone)
]

# Ignored rules
ignore = [
    "E501",  # Ignore line length (if using black)
    "F401",  # Unused imports in __init__.py
    "B008",  # Not recommended to use mutable default arguments
]

[tool.ruff.lint.isort]
# isort settings (import sorting)
known-first-party = ["coffeeshop"]  # Your modules for sorting
required-imports = ["from __future__ import annotations"]  # Automatically add imports

[tool.ruff.format]
# Formatting settings (if ruff format)
docstring-code-format = true  # Format code in docstrings
quote-style = "double"       # Single or double quotes ("double" or "single")

